--- a/blog/themes/next/_config.yml
+++ b/blog/themes/next/_config.yml
@@ -5,6 +5,9 @@
 # Put your favicon.ico into `hexo-site/source/` directory.
 favicon: /favicon.ico
 
+# avatar
+avatar: /images/avatar.png
+
 # Set default keywords (Use a comma to separate)
 keywords: "Hexo, NexT"
 
@@ -14,7 +17,7 @@ keywords: "Hexo, NexT"
 rss:
 
 # Specify the date when the site was setup
-#since: 2015
+since: 2017
 
 # icon between year and author @Footer
 authoricon: heart
@@ -39,11 +42,11 @@ seo: false
 menu:
   home: /
   #categories: /categories
-  #about: /about
+  about: /about
   archives: /archives
   tags: /tags
   #sitemap: /sitemap.xml
-  #commonweal: /404.html
+  commonweal: /404.html
 
 
 # Enable/Disable menu icons.
@@ -71,9 +74,9 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
-#scheme: Mist
-#scheme: Pisces
+# scheme: Muse
+scheme: Mist
+# scheme: Pisces
 
 
 # ---------------------------------------------------------------
@@ -174,16 +177,16 @@ toc:
 
 sidebar:
   # Sidebar Position, available value: left | right
-  position: left
-  #position: right
+  # position: left
+  position: right
 
   # Sidebar Display, available value:
   #  - post    expand on posts automatically. Default.
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggle.
-  display: post
-  #display: always
+  # display: post
+  display: always
   #display: hide
   #display: remove
 
@@ -474,10 +477,12 @@ use_motion: true
 fancybox: true
 
 # Canvas-nest
-canvas_nest: false
+# canvas_nest: false
+canvas_nest: true
 
 #three_waves
 three_waves: false
+# three_waves: true
 
 # Script Vendors.
 # Set a CDN address for the vendor you want to customize.
