--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: alex
+title: 少年派
 subtitle:
 description: 你怎么连话都说不清楚
-author: alex lee
+author: 少年的狐先生
 language: zh-Hans
 timezone:
 
