--- a/blog/themes/next/_config.yml
+++ b/blog/themes/next/_config.yml
@@ -44,9 +44,10 @@ menu:
   #categories: /categories
   about: /about
   archives: /archives
+  categories: /categories
   tags: /tags
   #sitemap: /sitemap.xml
-  commonweal: /404.html
+  # commonweal: /404.html
 
 
 # Enable/Disable menu icons.
@@ -74,8 +75,8 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-# scheme: Muse
-scheme: Mist
+scheme: Muse
+# scheme: Mist
 # scheme: Pisces
 
 
@@ -177,8 +178,8 @@ toc:
 
 sidebar:
   # Sidebar Position, available value: left | right
-  # position: left
-  position: right
+  position: left
+  # position: right
 
   # Sidebar Display, available value:
   #  - post    expand on posts automatically. Default.
@@ -191,7 +192,8 @@ sidebar:
   #display: remove
 
   # Sidebar offset from top menubar in pixels.
-  offset: 12
+  # offset: 12
+  offset: 120
   offset_float: 0
 
   # Back to top in sidebar
